@@ -12,12 +12,12 @@ config SAM4S_XPLAINED_PRO_CDCACM_DEVMINOR
 
 config SAM4S_XPLAINED_PRO_SCHED_TIMER_DEVPATH
     string "Scheduler Timer Device Path"
-	default "/dev/tc0"
+	default "/dev/rtt0"
 	depends on TIMER && SYSTEMTICK_EXTCLK
 
 config SAM4S_XPLAINED_PRO_CPULOAD_TIMER_DEVPATH
     string "CPU Load Timer Device Path"
-	default "/dev/tc1"
+	default "/dev/tc0"
 	depends on TIMER && SCHED_CPULOAD && SCHED_CPULOAD_EXTCLK
 
 
