@@ -12,10 +12,6 @@ CONFIG_HOST_LINUX=y
 # CONFIG_HOST_OSX is not set
 # CONFIG_HOST_WINDOWS is not set
 # CONFIG_HOST_OTHER is not set
-# CONFIG_WINDOWS_NATIVE is not set
-# CONFIG_WINDOWS_CYGWIN is not set
-# CONFIG_WINDOWS_MSYS is not set
-# CONFIG_WINDOWS_OTHER is not set
 
 #
 # Build Configuration
@@ -44,36 +40,9 @@ CONFIG_RAW_BINARY=y
 #
 # Debug Options
 #
-CONFIG_DEBUG=y
+# CONFIG_DEBUG is not set
 CONFIG_ARCH_HAVE_STACKCHECK=y
 # CONFIG_ARCH_HAVE_HEAPCHECK is not set
-# CONFIG_DEBUG_VERBOSE is not set
-
-#
-# Subsystem Debug Options
-#
-# CONFIG_DEBUG_MM is not set
-# CONFIG_DEBUG_SCHED is not set
-# CONFIG_DEBUG_USB is not set
-# CONFIG_DEBUG_FS is not set
-# CONFIG_DEBUG_LIB is not set
-# CONFIG_DEBUG_BINFMT is not set
-# CONFIG_DEBUG_GRAPHICS is not set
-# CONFIG_DEBUG_IRQ is not set
-CONFIG_DEBUG_STACK=y
-
-#
-# Driver Debug Options
-#
-# CONFIG_DEBUG_LEDS is not set
-# CONFIG_DEBUG_ANALOG is not set
-# CONFIG_DEBUG_SDIO is not set
-# CONFIG_DEBUG_GPIO is not set
-# CONFIG_DEBUG_DMA is not set
-# CONFIG_DEBUG_RTC is not set
-# CONFIG_DEBUG_WATCHDOG is not set
-# CONFIG_DEBUG_TIMER is not set
-# CONFIG_DEBUG_AUDIO is not set
 CONFIG_DEBUG_SYMBOLS=y
 CONFIG_ARCH_HAVE_CUSTOMOPT=y
 # CONFIG_DEBUG_NOOPT is not set
@@ -134,21 +103,14 @@ CONFIG_ARMV7M_USEBASEPRI=y
 CONFIG_ARCH_HAVE_MPU=y
 CONFIG_ARMV7M_MPU=y
 CONFIG_ARMV7M_MPU_NREGIONS=8
-CONFIG_DEBUG_HARDFAULT=y
 
 #
 # ARMV7M Configuration Options
 #
-# CONFIG_ARMV7M_TOOLCHAIN_ATOLLIC is not set
 CONFIG_ARMV7M_TOOLCHAIN_BUILDROOT=y
 # CONFIG_ARMV7M_TOOLCHAIN_CODEREDL is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODEREDW is not set
 # CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYL is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_DEVKITARM is not set
 # CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL is not set
-# CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_RAISONANCE is not set
 # CONFIG_ARMV7M_OABI_TOOLCHAIN is not set
 CONFIG_ARCH_HAVE_EXTNAND=y
 CONFIG_ARCH_HAVE_EXTNOR=y
@@ -217,7 +179,7 @@ CONFIG_SAM34_HSMCI=y
 CONFIG_SAM34_PDCA=y
 # CONFIG_SAM34_PWM is not set
 CONFIG_SAM34_RTC=y
-# CONFIG_SAM34_RTT is not set
+CONFIG_SAM34_RTT=y
 CONFIG_SAM34_SMC=y
 # CONFIG_SAM34_SPI0 is not set
 # CONFIG_SAM34_SSC is not set
@@ -264,13 +226,11 @@ CONFIG_SAM34_GPIOC_IRQ=y
 #
 # AT91SAM3/4 USB Full Speed Device Controller driver (DCD) options
 #
-# CONFIG_SAM34_UDP_REGDEBUG is not set
 CONFIG_SAM34_TC=y
 
 #
 # AT91SAM3/4 Timer/Counter options
 #
-# CONFIG_SAM34_TC_REGDEBUG is not set
 
 #
 # AT91SAM3/4 Watchdog Configuration
@@ -359,8 +319,8 @@ CONFIG_NSH_MMCSDSLOTNO=0
 # Board-Specific Options
 #
 CONFIG_SAM4S_XPLAINED_PRO_CDCACM_DEVMINOR=0
-CONFIG_SAM4S_XPLAINED_PRO_SCHED_TIMER_DEVPATH="/dev/tc0"
-CONFIG_SAM4S_XPLAINED_PRO_CPULOAD_TIMER_DEVPATH="/dev/tc1"
+CONFIG_SAM4S_XPLAINED_PRO_SCHED_TIMER_DEVPATH="/dev/rtt0"
+CONFIG_SAM4S_XPLAINED_PRO_CPULOAD_TIMER_DEVPATH="/dev/tc0"
 
 #
 # RTOS Features
@@ -410,7 +370,7 @@ CONFIG_NPTHREAD_KEYS=4
 #
 CONFIG_SCHED_CPULOAD=y
 CONFIG_SCHED_CPULOAD_EXTCLK=y
-CONFIG_SCHED_CPULOAD_TICKSPERSEC=333
+CONFIG_SCHED_CPULOAD_TICKSPERSEC=222
 CONFIG_SCHED_CPULOAD_TIMECONSTANT=2
 # CONFIG_SCHED_INSTRUMENTATION is not set
 
@@ -473,7 +433,9 @@ CONFIG_DEV_ZERO=y
 # CONFIG_SPI is not set
 # CONFIG_I2S is not set
 CONFIG_RTC=y
-CONFIG_RTC_DATETIME=y
+# CONFIG_RTC_DATETIME is not set
+CONFIG_RTC_HIRES=y
+CONFIG_RTC_FREQUENCY=32768
 CONFIG_RTC_ALARM=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_DEVPATH="/dev/watchdog0"
@@ -533,7 +495,6 @@ CONFIG_ARCH_HAVE_USART1=y
 CONFIG_USART1_ISUART=y
 CONFIG_MCU_SERIAL=y
 CONFIG_STANDARD_SERIAL=y
-# CONFIG_SERIAL_TIOCSERGSTRUCT is not set
 # CONFIG_UART0_SERIAL_CONSOLE is not set
 CONFIG_UART1_SERIAL_CONSOLE=y
 # CONFIG_USART1_SERIAL_CONSOLE is not set
@@ -938,7 +899,6 @@ CONFIG_NSH_CONSOLE=y
 #
 # USB Trace Support
 #
-# CONFIG_NSH_USBDEV_TRACE is not set
 # CONFIG_NSH_ALTCONDEV is not set
 CONFIG_NSH_ARCHINIT=y
 
@@ -1028,10 +988,6 @@ CONFIG_SYSTEM_SYSINFO_STACKSIZE=1024
 #
 # Stack Monitor
 #
-CONFIG_SYSTEM_STACKMONITOR=y
-CONFIG_SYSTEM_STACKMONITOR_STACKSIZE=1024
-CONFIG_SYSTEM_STACKMONITOR_PRIORITY=110
-CONFIG_SYSTEM_STACKMONITOR_INTERVAL=1
 
 #
 # USB CDC/ACM Device Commands
